--- a/config.json
+++ b/config.json
@@ -2,5 +2,6 @@
   "hostname": "127.0.0.1",
   "port": 80,
 
-  "dataLocation": "../data"
+  "dataLocation": "../data",
+  "resourcePackFilename": "vanilla.zip"
 }
