--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "mongodb": "^4.13.0",
-    "nconf": "^0.12.0"
+    "nconf": "^0.12.0",
+    "runtypes": "^6.6.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
